# ljxacom

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: build.yml  rust.yml
examples/: simple_acquire.rs  simple_acquire_async.rs
src/: lib.rs  ljx8_if.rs  ljx8_if_async.rs  ljxa_acq.rs  ljxa_error.rs  ljxa_errorcode.rs  profiledataconvert.rs
src/clib/: wrapper.hpp
src/clib/linux/include/: LJX8_ErrorCode.h  LJX8_IF_Linux.h  LJXA_ACQ.h
src/clib/linux/libsrc/: LJX8_IF_Linux.cpp  LJXA_ACQ.cpp  ProfileDataConvert.cpp  ProfileDataConvert.h
src/clib/windows/include/: LJX8_IF.h
src/clib/windows/libsrc/: LJXA_ACQ.cpp
src/clib/windows/x64/: LJX8_IF.lib
src/clib/windows/x86/: LJX8_IF.lib
