[package]
name = "ljxacom"
version = "0.1.0"
edition = "2021"
authors = ["Zhang Xiaoyu <zhangxiaoyu1017@gmail.com>"]
description = "Rust bindings for Keyence LJ-X8000A CommLib"
homepage = "https://github.com/zhxiaoyu/ljxacom"
repository = "https://github.com/zhxiaoyu/ljxacom"
license = "MIT"
keywords = ["Kence", "ljxacom", "LJXA", "LJX8","LJ-X8000A"]

[dependencies]

[build-dependencies]
cc = "1.0"
bindgen = "0.65.1"