[package]
name = "ljxacom"
version = "0.1.1"
edition = "2021"
authors = ["Zhang Xiaoyu <zhangxiaoyu1017@gmail.com>"]
description = "Rust bindings for Keyence LJ-X8000A CommLib"
homepage = "https://github.com/zhxiaoyu/ljxacom"
repository = "https://github.com/zhxiaoyu/ljxacom"
license = "MIT"
keywords = ["Keyence", "ljxacom", "LJXA", "LJX8","LJ-X8000A"]

[dependencies]
lazy_static = "1.4.0"
byteorder = "1.4"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
cc = "1.0"
bindgen = "0.65.1"